wrap words in fixed table cells, if hyphens do not work; refs #22612

--- a/Goobi/src/main/webapp/uii/templatePG/css/src/components/_tables-custom.scss
+++ b/Goobi/src/main/webapp/uii/templatePG/css/src/components/_tables-custom.scss
@@ -163,6 +163,8 @@ td {
   width: 100%;
 
   hyphens: auto;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 .table-fixed th,
